Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10714

Could not execute Delete_rows event on table; wsrep_max_ws_rows exceeded. Error_Code 1180

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 10.1.17, 10.0.27-galera
    • 10.1.18, 10.0.28-galera
    • Galera
    • None
    • RHEL 7

    Description

      My server got upgrade from 10.1.16 to 10.1.17 this morning, and the regular binlog replication went in error with this message
      "Could not execute Delete_rows event on table; wsrep_max_ws_rows exceeded".

      We are NOT running any Galera cluster and all setting is the same as 10.1.16.
      Here is what in the error log.

      2016-08-31  6:40:37 140169773512448 [ERROR] Slave SQL: Could not execute Delete_rows event on table ; wsrep_max_ws_rows exceeded, Error_code: 1180; handler error No Error!; the event's master log DB41-bin.030776, end_log_pos 448049769, Internal MariaDB error code: 1180
      2016-08-31  6:40:37 140169773512448 [Warning] Slave: wsrep_max_ws_rows exceeded Error_code: 1180
      2016-08-31  6:40:37 140169773512448 [ERROR] Error running query, slave SQL thread aborted. Fix the problem, and restart the slave SQL thread with "SLAVE START". We stopped at log 'DB41-bin.030776' position 443314105
      

      The work around for me is change the wsrep_max_ws_rows settings. I don't run galera, but I have this setting in my.cnf.

      [galera]
      #wsrep_provider                 = /usr/lib64/galera/libgalera_smm.so
      wsrep_provider_options          = "gcache.size=100G; gcache.page_size=1G; gmcast.segment=1; gcs.fc_limit=256; gcs.fc_factor=0.99; gcs.fc_master_slave=yes;"
      # Galera Cluster Configuration
      wsrep_cluster_name              = "Dash"
      wsrep_cluster_address           = "gcomm://"
      wsrep_sst_method                = xtrabackup-v2
      wsrep_sst_auth                  = "xtrabackup:password"
      wsrep_node_address              = "192.168.100.255"
      wsrep_node_name                 = "DB43"
      wsrep_slave_threads             = 8
      wsrep_max_ws_rows               = 1G #512K      #131072
      wsrep_max_ws_size               = 1G
      wsrep_auto_increment_control=0
      wsrep_log_conflicts = 1
      wsrep_load_data_splitting = 1
      

      Previously, my understand is if I comment out wsrep_provider will disable galera all together, but it seems like it is not the case. How can we disable galera from mariadb 10.1?

      Here is the output of show variables like 'wsrep%', and it shows "wsrep_on" as "OFF"

      wsrep_osu_method	TOI
      wsrep_auto_increment_control	OFF
      wsrep_causal_reads	OFF
      wsrep_certify_nonpk	ON
      wsrep_cluster_address	gcomm://
      wsrep_cluster_name	Dash
      wsrep_convert_lock_to_trx	OFF
      wsrep_data_home_dir	/mysqlc/mysqld_data/data/
      wsrep_dbug_option	
      wsrep_debug	OFF
      wsrep_desync	OFF
      wsrep_dirty_reads	OFF
      wsrep_drupal_282555_workaround	OFF
      wsrep_forced_binlog_format	NONE
      wsrep_gtid_domain_id	0
      wsrep_gtid_mode	OFF
      wsrep_load_data_splitting	ON
      wsrep_log_conflicts	ON
      wsrep_max_ws_rows	1000000
      wsrep_max_ws_size	1073741824
      wsrep_mysql_replication_bundle	0
      wsrep_node_address	192.168.100.255
      wsrep_node_incoming_address	AUTO
      wsrep_node_name	DB43
      wsrep_notify_cmd	
      wsrep_on	OFF
      wsrep_patch_version	wsrep_25.16
      wsrep_provider	none
      wsrep_provider_options	gcache.size=100G; gcache.page_size=1G; gmcast.segment=1; gcs.fc_limit=256; gcs.fc_factor=0.99; gcs.fc_master_slave=yes;
      wsrep_recover	OFF
      wsrep_replicate_myisam	OFF
      wsrep_restart_slave	OFF
      wsrep_retry_autocommit	1
      wsrep_slave_fk_checks	ON
      wsrep_slave_uk_checks	OFF
      wsrep_slave_threads	8
      wsrep_sst_auth	xtrabackup:password
      wsrep_sst_donor	
      wsrep_sst_donor_rejects_queries	OFF
      wsrep_sst_method	xtrabackup-v2
      wsrep_sst_receive_address	AUTO
      wsrep_start_position	00000000-0000-0000-0000-000000000000:-1
      wsrep_sync_wait	0
      

      Thanks.

      Attachments

        Issue Links

          Activity

            People

              nirbhay_c Nirbhay Choubey (Inactive)
              leomkkwan Leo Kwan
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: