MDEV-10714: Could not execute Delete_rows event on table; wsrep_max_ws_rows exceeded. Error_Code 1180

The wsrep_max_ws_rows related implementation should be skipped
when server is running with wsrep disabled.